# Evie_Old

./: $null  .TMP.txt  .c4droid  .directory  .gitignore  .txt  Assembly_Definitions.h  CMakeCache.txt  CMakeLists.txt  CNAME  Evie  Evie.exp  Evie.lib  Evie.sln  Evie.vcxproj  Evie.vcxproj.filters  GAS.vcxproj  GAS.vcxproj.filters  LICENSE  Lexer  Lexer.h  MOV.h  Makefile  Makefile_banana  Makefile_old  NetrwMessage  README.md  README.txt  Token.cpp  Token.h  _.swp  _compile_commands.json  _config.yml  a.out  asmTools.h  banana.asm  banana.g  cmake_install.cmake  core  dump.txt  (+17 more)
.github/ISSUE_TEMPLATE/: bug_report.md
Combined.txt/: .gitignore  Evie.vcxproj  Evie.vcxproj.filters  Makefile
Cpp/: Func.cpp  Register.cpp  Token.cpp  Type.cpp  a.out  main  main.cpp
Cpp/Assembler/: Assembler.cpp
Cpp/Back/: Back.cpp  Comment.cpp  Definer.cpp  Func.cpp  Generator.cpp  Register.cpp  Registers.cpp  StackFrame.cpp  Token.cpp  Type.cpp
Cpp/BackEnd/: ARM.cpp  BackEnd.cpp  DebugGenerator.cpp  IRGenerator.cpp  IROptimizer.cpp  IRPostProsessor.cpp  Selector.cpp  x86.cpp
Cpp/Docker/: ASM.cpp  DLL.cpp  Docker.cpp  ELF.cpp  HTTPS.cpp  LIB.cpp  Mangler.cpp  OBJ.cpp  TXT.cpp
Cpp/Emulator/: Emulator.cpp
Cpp/Interpreter/: Interpreter.cpp  Modder.cpp
Cpp/Lexer/: Component.cpp  Definer.cpp  Lexer.cpp  Position.cpp  main  main.cpp
Cpp/Linker/: Linker.cpp
Cpp/Linux/: Linux.cpp
Cpp/Mangler/: Mangler.cpp
Cpp/Nodes/: Node.cpp  Token.cpp
Cpp/OpC/: IR.cpp
Cpp/Parser/: Algebra.cpp  Analyzer.cpp  Func.cpp  Memory_Manager.cpp  Optimizer.cpp  Parser.cpp  PostProsessor.cpp  Register.cpp  Token.cpp  Type.cpp
Cpp/PostProsessor/: Algebra.cpp  PostProsessor.cpp
Cpp/PreProsessor/: PreProsessor.cpp
Cpp/Selector/: Selector.cpp
Cpp/Semantic/: Semantic.cpp
Cpp/Test/: Test.cpp
Cpp/UI/: Producer.cpp  Safe.cpp  Satellite.cpp  Service.cpp  Usr.cpp
Cpp/Windows/: Windows.cpp
Credits/: OBJECT_LICENSE.txt
Debug/: back.obj.enc  main.new.obj.enc  optimizer.new.obj.enc  parser.new.obj.enc  token.new.obj.enc  vc142.idb
Debug/GAS.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GAS.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Dependencies/Curl/: .gitignore  curl.h  curlver.h  libcurl.lib  typecheck-gcc.h
H/: Assembly_Definitions.h  Flags.h  Func.h  MOV.h  Register.h  Token.h  Type.h
H/Assembler/: Assembler.h  Assembler_Types.h
H/Back/: Assembly_Definitions.h  Back.h  Comment.h  Definer.h  Generator.h  Register.h  Registers.h  Stack.h  StackFrame.h  Token.h
H/BackEnd/: ARM.h  BackEnd.h  DebugGenerator.h  IRGenerator.h  IROptimizer.h  IRPostProsessor.cpp  Stack.h  (+3 more)
IO/: Final.e  List.e  Memory.e  STD.e  Test.e.asm  Test_big.e  _asm.h  asm.h  boost.e  cstd.e  general.h  gl.e  glfw3.h  gstd.e  rsstd.e  std.g  string.e  sys.e  test  test.asm  test.asm.ThisIsTotallyExecutable  test.asm.exp  test.asm.ilk  test.asm.lib  test.e  test.e.asm  test.e.asm.out  test.g  win32.asm
STD/: Console.e  List.e  Memory.e  STD.e  String.e  Types.e  sys.e
Tests/: Unit_Tests.cpp
(+134 files in other folders)
